<resources>
    <string name="app_name">FoodWithFriends</string>
    <string name="title_activity_existing_user_splash">ExistingUserSplash</string>
    <!-- Strings used for fragments for navigation -->
    <string name="first_fragment_label">First Fragment</string>
    <string name="second_fragment_label">Second Fragment</string>
    <string name="next">Next</string>
    <string name="previous">Previous</string>

    <string name="accept">Accept</string>
    <string name="decline">Decline</string>


    <string name="hello_first_fragment">Hello first fragment</string>
    <string name="hello_second_fragment">Hello second fragment. Arg: %1$s</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="title_activity_navigation">NavigationActivity</string>
    <string name="login">Login</string>
    <string name="phonenumber">PhoneNumber</string>
    <string name="create_a_new_group">Create a new group:</string>
    <string name="group_name">group name</string>
    <string name="group_description">group description</string>
    <string name="save">save</string>
    <string name="browse_groups">Browse Groups:</string>
    <string name="home">Home</string>
    <string name="please_enable_location_services">Please enable location services.</string>
    <string name="group_name_here">GROUP NAME HERE</string>
    <string name="group_description_here">GROUP DESCRIPTION HERE</string>
    <string name="join_our_group">join our group!</string>
    <string name="member_name_here">MEMBER NAME HERE</string>
    <string name="member_gender_here">MEMBER GENDER HERE</string>
    <string name="member_bio_here">MEMBER BIO HERE</string>
    <string name="member_contact_here">MEMBER CONTACT HERE</string>
    <string name="member_image">Member Image</string>
    <string name="member_information">Member Information</string>
    <string name="back_to_groups">back to groups</string>
    <string name="delete_group">delete group</string>
    <string name="leave_group">leave group</string>
    <string name="upload_photos">Upload Photos</string>
    <string name="add_photo_from_library">Add photo from library</string>
    <string name="take_photo_from_camera">Take photo from camera</string>
    <string name="selected_image">Selected Image</string>
    <string name="user_settings">User Settings</string>
    <string name="name">Name</string>
    <string name="user_bio">Bio</string>
    <string name="textview">TextView</string>
    <string name="max_distance">Max Distance: </string>
    <string name="male">Male</string>
    <string name="female">Female</string>
    <string name="save_changes">save changes</string>
    <string name="delete_account">Delete Account</string>
    <string name="settings">Settings</string>
    <string name="welcome_to_food_with_friends_please_set_up_your_profile">Welcome to Food with Friends. Please set up your profile.</string>
    <string name="your_name">Your Name</string>
    <string name="tell_people_about_yourself">Tell people about yourself</string>
    <string name="gender">Gender</string>
    <string name="continue_keyword">Continue</string>
    <string name="your_groups">Your Groups</string>
    <string name="groups">Groups</string>
    <string name="current_locale">en_US</string>
    <string name="group">Group: </string>
    <string name="description">Description: </string>
    <string name="contact">Contact</string>
    <string name="access_camera_dialog">Food With Friends would like to access your camera</string>
    <string name="access_photos_dialog">Food With Friends would like to access your photos</string>


</resources>