<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        tools:ignore="MissingConstraints">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/create_a_new_group"
            android:textSize="30dp"></TextView>
        <EditText
            android:id="@+id/group_name"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/group_name"></EditText>

        <EditText
            android:id="@+id/group_description"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/group_description"></EditText>

        <Button
            android:id="@+id/save"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/save"></Button>

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/browse_groups"
            android:textSize="30dp"></TextView>

    </LinearLayout>
</androidx.constraintlayout.widget.ConstraintLayout>