<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android" android:layout_width="match_parent"
    android:layout_height="match_parent">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical">

        <TextView
            android:id="@+id/photo_upload_text"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/upload_photos">
        </TextView>

        <ImageView
            android:id="@+id/upload_image"
            android:layout_width="match_parent"
            android:layout_height="344dp"
            android:contentDescription="@string/selected_image"></ImageView>
        <Button
            android:id="@+id/add_photo_button"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/add_photo_from_library">
        </Button>
        <Button
            android:id="@+id/take_photo_button"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/take_photo_from_camera">
        </Button>
        <Button
            android:id="@+id/next_button"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/next"
            android:layout_gravity="center_horizontal">
        </Button>
    </LinearLayout>

</androidx.constraintlayout.widget.ConstraintLayout>