<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        tools:ignore="MissingConstraints">

        <LinearLayout
            android:layout_width="234dp"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:paddingBottom="15dp"
            android:paddingLeft="7dp"
            tools:ignore="MissingConstraints">

            <TextView
                android:id="@+id/member_name"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/member_name_here"></TextView>

            <TextView
                android:id="@+id/member_gender"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/member_gender_here"></TextView>

            <TextView
                android:id="@+id/member_bio"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/member_bio_here"></TextView>

            <TextView
                android:id="@+id/member_contact"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/member_contact_here"></TextView>


        </LinearLayout>

        <ImageView
            android:id="@+id/member_image"
            android:layout_width="wrap_content"
            android:contentDescription="@string/member_image"
            android:layout_height="78dp"
            android:layout_weight="1"
            tools:srcCompat="@tools:sample/avatars" />

    </LinearLayout>

</androidx.constraintlayout.widget.ConstraintLayout>