<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android" android:layout_width="match_parent"
    android:layout_height="match_parent">

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/member_information"
                android:textSize="30dp"
                android:paddingBottom="15dp"></TextView>
            <LinearLayout
                android:id="@+id/group_container"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical"></LinearLayout>
            <Button
                android:id="@+id/backBtn"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/back_to_groups"></Button>
            <Button
                android:id="@+id/deleteBtn"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/delete_group"></Button>
            <Button
                android:id="@+id/leaveBtn"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/leave_group"></Button>

        </LinearLayout>

    </ScrollView>

</androidx.constraintlayout.widget.ConstraintLayout>