<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".SettingsFragment">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical">

        <TextView
            android:id="@+id/userSettings"
            android:layout_width="wrap_content"
            android:layout_height="68dp"
            android:gravity="center"
            android:orientation="vertical"
            android:text="@string/user_settings"
            app:layout_constraintBottom_toBottomOf="@+id/textView3"
            app:layout_constraintEnd_toEndOf="@+id/textView3"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintVertical_bias="0.0"
            android:layout_gravity="center_horizontal"
            android:textSize="20dp"/>

        <TextView
            android:id="@+id/userName"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/name"
            android:textSize="15dp"></TextView>
        <EditText
            android:id="@+id/name"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="center_horizontal"
            android:hint="@string/name"
            tools:layout_editor_absoluteX="179dp"
            tools:layout_editor_absoluteY="143dp"></EditText>

        <TextView
            android:id="@+id/userBio"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/user_bio"
            android:layout_marginTop="20dp"
            android:textSize="15dp"></TextView>
        <EditText
            android:id="@+id/bio"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="center_horizontal"
            android:hint="@string/user_bio"
            tools:layout_editor_absoluteX="189dp"
            tools:layout_editor_absoluteY="207dp"></EditText>

        <TextView
            android:id="@+id/distanceTextView"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="20dp"
            android:text="@string/textview"
            tools:text="@string/max_distance" />

        <SeekBar
            android:id="@+id/seekBarDistance"
            android:layout_marginTop="5dp"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:min="1"
            android:max="50" />

        <RadioGroup
            android:id="@+id/radioSex"
            android:layout_marginTop="20dp"
            android:layout_width="413dp"
            android:layout_height="59dp"
            android:gravity="left"
            android:orientation="vertical"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="1.0"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintVertical_bias="0.571">


            <RadioButton
                android:id="@+id/radioMale"
                android:layout_width="116dp"
                android:layout_height="23dp"
                android:checked="true"
                android:text="@string/male"
                app:layout_constraintBottom_toTopOf="@+id/saveButton"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintHorizontal_bias="0.498"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/radioGroup"
                app:layout_constraintVertical_bias="0.186"
                tools:text="Male" />

            <RadioButton
                android:id="@+id/radioFemale"
                android:layout_width="116dp"
                android:layout_height="23dp"
                android:text="@string/female"
                app:layout_constraintBottom_toTopOf="@+id/saveButton"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintHorizontal_bias="0.498"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/radioGroup"
                app:layout_constraintVertical_bias="0.186"
                tools:text="Female" />

        </RadioGroup>

        <Button
            android:id="@+id/save"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/save_changes"
            android:layout_gravity="center_horizontal"></Button>

        <Button
            android:id="@+id/btnDelete"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center_horizontal"
            android:text="@string/delete_account" />

    </LinearLayout>


</androidx.constraintlayout.widget.ConstraintLayout>