<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">

        <LinearLayout
            android:layout_width="219dp"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:paddingLeft="7dp"
            android:paddingBottom="15dp"
            tools:ignore="MissingConstraints">

            <TextView
                android:id="@+id/group_name"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/group_name_here"></TextView>

            <TextView
                android:id="@+id/group_description"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/group_description_here"></TextView>

        </LinearLayout>

        <Button
            android:id="@+id/join_button"
            android:layout_width="113dp"
            android:layout_height="wrap_content"
            android:layout_gravity="right|end"
            android:baselineAligned="false"
            android:text="@string/join_our_group"></Button>

    </LinearLayout>

</androidx.constraintlayout.widget.ConstraintLayout>